lib/bait/checker/tests/attr_unknown.out
lib/bait/checker/tests/attr_unknown.in.bt:1:9 error: unknown attribute "xyz_attr"
