lib/bait/checker/tests/attr_unknown.in.bt
@xyz_attr
fun foo() {}
